selected fonts, added css imports

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ permalink:           pretty
 
 # Setup
 title:               Tasnim Rahman
-tagline:             Personal Website In Progress
+tagline:             Website In Progress
 url:                 https://rahmantasnim.github.io
 paginate:            1
 baseurl:             ""
